@@ -31,7 +31,7 @@ NEW: {
 	} else {
 		ok(!defined($shm), 'Shared memory area does not exist before the test');
 		{
-			my $cache = CHI->new(driver => 'SharedMem', shmkey => 1);
+			my $cache = CHI->new(driver => 'SharedMem', shm_key => 1);
 			ok(defined($cache));
 
 			# Calling get_namespaces() will force the area to be created
